--- a/react-masterclass/package.json
+++ b/react-masterclass/package.json
@@ -6,29 +6,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.12",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "apexcharts": "^3.32.0",
     "react": "^17.0.2",
-    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-query": "^3.34.0",
-    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,12 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-helmet": "^6.1.4",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.17",
-    "gh-pages": "^3.2.3"
-  },
-  "homepage": "https://chltnm.github.io/react-masterclass"
+  }
 }
