--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.17",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^2.0.1"
   },
-  "homepage": "https://chltnm.github.io/react-masterclass"
+  "homepage": "https://chltnm.github.io/react-masterclass/"
 }
